--- a/ELK-Kafka-Docker/kafka-elk/filebeat.yml
+++ b/ELK-Kafka-Docker/kafka-elk/filebeat.yml
@@ -8,5 +8,5 @@ filebeat.inputs:
 
 output.elasticsearch:
   hosts: ["elasticsearch-cntr:9200"]
-  username: "elastic"
-  password: "beinQKHdHMruD5WsrelW"
+  username: "<user>"
+  password: "<pass>"
